# rjmc-widget-mixture

./: .gitignore  CMakeLists.txt  README.md  app.js  build.sh  generate_test_data.R  index.html  mixture_rjmc_mathematics.md  mixture_rjmc_mathematics.tex  r_wasm_app.js  r_wasm_server.R  rjmc_simple.js  rjmc_wasm.js  start_r_wasm.sh
.github/workflows/: deploy.yml
sampled data for testing/: README.json  mixture_test_1_K2.csv  mixture_test_1_K2.json  mixture_test_2_K2.csv  mixture_test_2_K4.json  mixture_test_3_K2.json  mixture_test_3_K6.csv  mixture_test_4_K4.csv  mixture_test_4_K6.json  mixture_test_5_K3.json  mixture_test_5_K8.csv
src/: rjmc_wasm.cpp  rjmc_wasm_simple.cpp
